@@ -202,6 +202,14 @@ Scalar::Does
 
 =item *
 
+Sereal::Decoder
+
+=item *
+
+Sereal::Encoder
+
+=item *
+
 Shell::Config::Generate
 
 =item *
