@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - added Mojolicious::Plugin::RenderFile
   - added Mojo::JSON::Any
+  - added Sereal::Encoder
+  - added Sereal::Decoder
 
 0.28      2012-11-06 10:43:47 EST5EDT
   - added Module::CoreList
